--- a/src/assets/styles.css
+++ b/src/assets/styles.css
@@ -153,6 +153,9 @@
 
   .fc .fc-view-harness {
     background-color: #f0f0f0; 
+    border: 5px solid #5D7179;
+    border-radius: 0px; 
+    color: #5D7179;
   }
   
 
@@ -181,5 +184,40 @@
 .fc .fc-button:hover {
   background-color: #87a4b0;  
   border-color: #4b6069;  
+}
+
+.fc .fc-day-today {
+  background-color: #5D7179!important; 
+  color:white;
+}
+
+.fc .fc-event {
+  background-color: #5fc880 !important;
+  border-color: #5fc880 !important; 
+  color: #ffffff !important; 
+}
+.fc .fc-event.assignment {
+  background: #35cbfd !important; /* Example: yellow background */
+}
+
+/* Style for tests */
+.fc .fc-event.test {
+  background: #ff0404;
+
+}
+
+/* Style for study sessions */
+.fc-event.study {
+  background: #4caf50 !important; /* Example: green background */
+}
+
+/* Style for classes */
+.fc-event.class {
+  background: #ecf321 !important; /* Example: blue background */
+}
+
+/* Style for miscellaneous events */
+.fc-event.misc {
+  background: #9c27b0 !important; /* Example: purple background */
 }
 
